# neurdb

./: .clang-format  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpu  Dockerfile.cuda11  LICENSE  NOTICE  README.md  build.sh  docker-init.sh  test.sql
aiengine/pgext/nr_modelmanager/: CMakeLists.txt  Makefile  nr_model.control  readme.md
aiengine/pgext/nr_modelmanager/sql/: nr_model--1.0.0.sql
aiengine/pgext/nr_modelmanager/src/: interface.c  interface.h
aiengine/pgext/nr_modelmanager/src/access/: model_sl.c  model_sl.h  storage.c  storage.h
aiengine/pgext/nr_modelmanager/src/inference/: model_inference.c  model_inference.h
aiengine/pgext/nr_modelmanager/src/utils/log/: logger.c  logger.h
aiengine/pgext/nr_modelmanager/src/utils/spi/: spi.c  spi.h
aiengine/pgext/nr_modelmanager/src/utils/torch/: device.cpp  device.h  module_wraper.cpp  module_wraper.h  torch_wrapper.cpp  torch_wrapper.h
contrib/nr/: Cargo.toml  README.md  neurdb_extension.control
contrib/nr/pysrc/: README.md  app.py  cli.py  client.py  client2.py  client_mix.py  client_socket.py  client_stream.py  config.ini  pg_interface.py  requirement.txt
contrib/nr/pysrc/app/: __init__.py
contrib/nr/pysrc/app/handlers/: data_dispatcher.py  finetune.py  inference.py  setup.py  train.py
contrib/nr/pysrc/app/routes/: __init__.py  blueprints.py  context.py  finetune.py  inference.py  routes.py  train.py
contrib/nr/pysrc/app/socketio/: data_socketio.py
contrib/nr/pysrc/app/websocket/: __init__.py  data_dispatcher.py  data_socket.py
contrib/nr/pysrc/apps/: __init__.py
contrib/nr/pysrc/apps/armnet/: builder.py
contrib/nr/pysrc/apps/armnet/model/: layers.py  model.py
contrib/nr/pysrc/apps/base/: builder.py
contrib/nr/pysrc/apps/mlp_clf/: builder.py
contrib/nr/pysrc/apps/mlp_clf/model/: model.py
contrib/nr/pysrc/cache/: __init__.py  data_cache.py  data_dispatcher.py  model_cache.py  states.py
contrib/nr/pysrc/clients/: client_socket.py
contrib/nr/pysrc/connection/: __init__.py  nr.py  pg_connect.py
contrib/nr/pysrc/dataloader/: libsvm.py  libsvm_dataset.py  preprocessing.py  steam_libsvm.py  steam_libsvm_dataset.py
contrib/nr/pysrc/examples/: mlp.py
contrib/nr/pysrc/logger/: logger.py
contrib/nr/pysrc/models/: __init__.py
contrib/nr/pysrc/models/armnet/: builder.py  requirements.txt
contrib/nr/pysrc/models/armnet/utils/: entmax.py
contrib/nr/pysrc/models/base/: builder.py
contrib/nr/pysrc/models/mlp_clf/: builder.py
contrib/nr/pysrc/models/mlp_clf/model/: model.py
contrib/nr/pysrc/scripts/: clustering.py
contrib/nr/pysrc/shared_config/: config.py
contrib/nr/pysrc/utils/: ckp.py  dataset.py  date.py  io.py  metrics.py  parse_sql.py
contrib/nr/sql/: pg_extension--0.1.0.sql
contrib/nr/src/: lib.rs
contrib/nr/src/bindings/: mod.rs
contrib/nr/src/models/: ml_svc.rs  mlp_clf.rs  mod.rs
contrib/nr/src/utils/: io.rs  mod.rs
contrib/nr/tests/utils/: main.rs
contrib/nr_preprocessing/: CMakeLists.txt  Makefile
contrib/nr_preprocessing/sql/: nr_preprocessing--1.0.0.sql
contrib/nr_preprocessing/src/: interface.c  interface.h
contrib/nr_preprocessing/src/utils/data_structure/: queue.c  queue.h
contrib/nr_preprocessing/src/utils/metric/: time_metric.c  time_metric.h
contrib/nr_preprocessing/src/utils/network/: http.c  http.h  socketio.cpp  socketio.h  socketio_nr.c  socketio_nr.h  websocket.c  websocket.h
dbengine/nr_kernel/nr_ext/: CMakeLists.txt  Makefile  nr_ext.control
dbengine/nr_kernel/nr_ext/src/: execProcnode.c  nodePredict.c  nodePredict.h  nr_executor.c  nr_kernel.c  nr_kernel.h  nr_planner.c  predict.c  predict.h
dbengine/nr_kernel/nr_molqo/: CMakeLists.txt  Makefile  README.md  nr_molqo.control  simple_server.py
dbengine/nr_kernel/nr_molqo/sql/: nr_molqo--1.0.sql
dbengine/nr_kernel/nr_molqo/src/: http_client.c  http_client.h  nr_molqo.c
dbengine/nr_kernel/nr_pipeline/: .gitignore  CMakeLists.txt  Makefile  nr_pipeline.control
dbengine/nr_kernel/nr_pipeline/sql/: nr_pipeline--1.0.0.sql  nr_pipeline--2.0.0.sql
dbengine/nr_kernel/nr_pipeline/src/: interface.c  interface.h  interface2.c  interface2.h
dbengine/nr_kernel/nr_pipeline/src/labeling/: encode.c  encode.h
dbengine/nr_kernel/nr_pipeline/src/utils/cjson/: cJSON.c  cJSON.h
dbengine/nr_kernel/nr_pipeline/src/utils/data_structure/: queue.c  queue.h
dbengine/nr_kernel/nr_pipeline/src/utils/hash/: md5.c  md5.h
dbengine/nr_kernel/nr_pipeline/src/utils/metric/: time_metric.c  time_metric.h
dbengine/nr_kernel/nr_store/: CMakeLists.txt  Makefile  pg_neurstore.control
dbengine/nr_kernel/nr_store/include/microservice/: ns_micro_proto.h  ns_micro_service.h  ns_micro_threadpool.h  ns_micro_utils.h
dbengine/nr_kernel/nr_store/include/neurstore/: neurstore.h
dbengine/nr_kernel/nr_store/include/pgext/: global.h  interface.h  operation.h
dbengine/nr_kernel/nr_store/script/: build_external.sh  download_eigen.sh  download_onnx.sh  download_tokenizer.sh
dbengine/nr_kernel/nr_store/sql/: pg_neurstore--1.0.0.sql
dbengine/nr_kernel/nr_store/src/microservice/: ns_micro_proto.cpp  ns_micro_server_main.cpp  ns_micro_service.cpp  ns_micro_threadpool.cpp  ns_micro_utils.c
dbengine/nr_kernel/nr_store/src/neurstore/: neurstore.cpp
dbengine/nr_kernel/nr_store/src/pgext/: interface.c  operation.c
dbengine/nr_kernel/nr_store/src/pgext/ipc/: channel.c  (+2 more)
dbengine/nrext/nr_kernel/: CMakeLists.txt  Makefile  README.md  nr_kernel.control
dbengine/nrext/nr_kernel/src/: execProcnode.c  nr_executor.c  nr_kernel.h
neurdb_api/python/: .gitignore  README.md  pyproject.toml
neurdb_api/python/neurdb/: logger.py
neurdb_api/python/neurdb/storeman/: config.py  readme.md
neurdb_api/python/neurdb/storeman/common/: __init__.py  storage.py
neurdb_api/python/neurdb/storeman/sql/: __init__.py  database.py
neurdb_api/python/storage_manager/: config.py  readme.md
neurdb_api/python/storage_manager/common/: __init__.py  storage.py
neurdb_api/python/storage_manager/sql/: __init__.py  database.py  entity.py
neurdb_api/python/storage_manager/utils/: __init__.py  serializer.py
(+1562 files in other folders)
